--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ h2{
 
 .navwrap{
     margin-right: 150px;
+    display: none;
 }
 
 nav{
@@ -47,6 +48,7 @@ nav{
     justify-content: space-between;
     background-color: black;
     box-shadow: 2px 2px 10px gray;
+    z-index: 99;
     
 }
 
@@ -58,8 +60,7 @@ nav{
     /* font-weight: 300; */
 
 }
-.nav-links{
-    z-index: 99;
+.nav-links{  
     position: relative;
     right: 500px;
 }
@@ -110,7 +111,7 @@ line-height: 4rem;
 }
 
 .main{
-
+    z-index: -1;
     width: 100%;
     height: 100vh;
     margin-right: 150px;
@@ -123,6 +124,7 @@ line-height: 4rem;
     
 }
 .main h1{
+    z-index: -2;
     position: absolute;
     text-align: center;
     top: 40%;
@@ -580,6 +582,10 @@ footer{
         right: 1000px;
     }
 
+    .navwrap{
+        display: block;
+    }
+
     .navwrap, .main, #profile, #skills, #interests,  #contact, footer{
         margin-right: 0;
     }
@@ -599,7 +605,7 @@ footer{
         margin-right: 0px;
         text-align: center;
     }
-    
+
     #education .row{
         margin-right: 0;
     }
